
AM_CPPFLAGS = -I$(top_srcdir)
AM_CXXFLAGS = -Wall -Wextra

noinst_PROGRAMS = unit_tests

unit_tests_SOURCES = \
    catch.hpp \
    main.cc \
    bitblk.cc \
    bitfor.cc \
    bitpck.cc \
    bitpfr.cc \
    normal.cc \
    offset.cc \
    varint.cc \
    zigzag.cc \
    integer_codec.cc \
    integer_group.cc
